fix for jdk17